Remove use of Java 9+ methods